syntax = "proto3";

option csharp_namespace = "AIKernel.Core.Catalog.API.Grpc";

package catalog;

// Catalog service for managing resources and relationships
service CatalogService {
  // Resource operations
  rpc GetResource (GetResourceRequest) returns (ResourceResponse);
  rpc SearchResources (SearchRequest) returns (ResourceListResponse);
  rpc RegisterResource (RegisterResourceRequest) returns (ResourceResponse);
  rpc UpdateResource (UpdateResourceRequest) returns (ResourceResponse);
  rpc DeleteResource (DeleteResourceRequest) returns (DeleteResponse);
  rpc AutocompleteResources (AutocompleteRequest) returns (ResourceListResponse);

  // Relationship operations
  rpc GetRelationship (GetRelationshipRequest) returns (RelationshipResponse);
  rpc CreateRelationship (CreateRelationshipRequest) returns (RelationshipResponse);
  rpc DeleteRelationship (DeleteRelationshipRequest) returns (DeleteResponse);
  rpc GetRelationshipsBySource (GetRelationshipsBySourceRequest) returns (RelationshipListResponse);
  rpc GetRelationshipsByTarget (GetRelationshipsByTargetRequest) returns (RelationshipListResponse);

  // Graph traversal operations
  rpc GetDependencies (GetDependenciesRequest) returns (ResourceListResponse);
  rpc GetDependents (GetDependentsRequest) returns (ResourceListResponse);
  rpc GetLineageUpstream (GetLineageRequest) returns (ResourceListResponse);
  rpc GetLineageDownstream (GetLineageRequest) returns (ResourceListResponse);
  rpc CheckCycle (CheckCycleRequest) returns (CheckCycleResponse);

  // Search and facets
  rpc GetFacets (GetFacetsRequest) returns (FacetsResponse);
}

// Resource messages
message ResourceResponse {
  string id = 1;
  string resource_type = 2;
  string name = 3;
  optional string namespace = 4;
  map<string, string> metadata = 5;
  repeated string tags = 6;
  string version = 7;
  string created_at = 8;
  string updated_at = 9;
  bool is_active = 10;
  map<string, string> properties = 11;
}

message ResourceListResponse {
  repeated ResourceResponse resources = 1;
  int32 total_count = 2;
}

message GetResourceRequest {
  string id = 1;
}

message SearchRequest {
  string query = 1;
  optional string resource_type = 2;
  optional string namespace = 3;
  repeated string tags = 4;
  int32 page_size = 5;
  int32 page_number = 6;
}

message AutocompleteRequest {
  string prefix = 1;
  int32 limit = 2;
}

message RegisterResourceRequest {
  string resource_type = 1;
  string name = 2;
  optional string namespace = 3;
  map<string, string> metadata = 4;
  repeated string tags = 5;
  string version = 6;
  map<string, string> properties = 7;
}

message UpdateResourceRequest {
  string id = 1;
  string name = 2;
  optional string namespace = 3;
  map<string, string> metadata = 4;
  repeated string tags = 5;
  map<string, string> properties = 6;
}

message DeleteResourceRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// Relationship messages
message RelationshipResponse {
  string id = 1;
  string source_resource_id = 2;
  string target_resource_id = 3;
  string relationship_type = 4;
  string created_at = 5;
  optional string created_by = 6;
  bool is_bidirectional = 7;
  optional string dependency_type = 8;
  bool required = 9;
  optional string version_constraint = 10;
  optional string transformation_type = 11;
  optional string transformation_logic = 12;
}

message RelationshipListResponse {
  repeated RelationshipResponse relationships = 1;
}

message GetRelationshipRequest {
  string id = 1;
}

message CreateRelationshipRequest {
  string source_resource_id = 1;
  string target_resource_id = 2;
  string relationship_type = 3;
  optional string created_by = 4;
  bool is_bidirectional = 5;
  optional string dependency_type = 6;
  bool required = 7;
  optional string version_constraint = 8;
  optional string transformation_type = 9;
  optional string transformation_logic = 10;
}

message DeleteRelationshipRequest {
  string id = 1;
}

message GetRelationshipsBySourceRequest {
  string source_id = 1;
}

message GetRelationshipsByTargetRequest {
  string target_id = 1;
}

// Graph traversal messages
message GetDependenciesRequest {
  string resource_id = 1;
  int32 depth = 2;
}

message GetDependentsRequest {
  string resource_id = 1;
  int32 depth = 2;
}

message GetLineageRequest {
  string resource_id = 1;
  int32 depth = 2;
}

message CheckCycleRequest {
  string source_id = 1;
  string target_id = 2;
  string relationship_type = 3;
}

message CheckCycleResponse {
  bool would_create_cycle = 1;
}

// Facets messages
message GetFacetsRequest {
  optional string query = 1;
}

message FacetsResponse {
  map<string, int64> facets = 1;
}
